# StarBots

./: CHANGES.rst  MANIFEST.in  Makefile  README.md  SECURITY.md  crowdin.yml  make.bat  pyproject.toml  setup.py  tox.ini
docs/: Makefile  conf.py  framework_app_commands.rst  framework_bank.rst  framework_checks.rst  framework_config.rst  framework_datamanager.rst  framework_modlog.rst  framework_rpc.rst  guide_cog_creation.rst  guide_cog_creators.rst  guide_trivia_list_creation.rst  make.bat  version_guarantees.rst
docs/_build/html/: .buildinfo  about_venv.html  autostart_mac.html  autostart_systemd.html  changelog.html  (+36 more)
docs/_templates/: layout.html
docs/cog_guides/: cog_manager_ui.rst
docs/incompatible_changes/: 3.5.rst
requirements/: base.in  base.txt  extra-doc.txt  extra-test.txt
schema/: red_cog.schema.json  red_cog_repo.schema.json  trivia.schema.json
starbot/: __init__.py  __main__.py  setup.py
starbot/core/: _cli.py  _cog_manager.py  _debuginfo.py  _diagnoser.py  _events.py  _rpc.py  bank.py  bot.py  config.py  core_commands.py  core_commands.py.save  data_manager.py  dev_commands.py  errors.py  i18n.py  modlog.py
starbot/pytest/: alias.py  core.py  data_manager.py  downloader.py  economy.py  mod.py  permissions.py  rpc.py
tests/: conftest.py
tests/cogs/: test_alias.py  test_economy.py  test_mod.py  test_permissions.py  test_trivia.py
tests/core/: test_app_commands.py  test_cog_manager.py  test_commands.py  test_data_manager.py  test_dev_commands.py  test_rpc.py  test_utils.py  test_version.py
tools/: edit_testrepo.py  release_helper.py
(+5981 files in other folders)
